Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11524

Constant GUI freezing (settings are being saved for no reason)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 3.1.0-beta
    • Qt Creator 3.1.0-beta
    • All Other Issues
    • None
    • Arch Linux, Qt 5.2.1
      Ubuntu 12.04, Qt 5.2.1
    • b3062d79130c131e50dd26a79c1511c7d5733b77, c0eaed863025543bd36268df7b588576d5696dd1

    Description

      It takes few milliseconds to save a value to Qt Creator's configuration database (~/.config/QtProject/QtCreator.db). But too many values are being saved while doing almost nothing – at start, exit, pressing ESC in editor, switching modes like "Edit", "Debug" or "Help".

      I've attached backtrace at the point when the GUI is frozen and output from Qt Creator with some more debug info (I've set debug_settings=1 in src/plugins/coreplugin/settingsdatabase.cpp).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            lukho Lukas Holecek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes