Improve performance of writing settings

By wrapping related ones in a single transaction, instead of
(implicitly) doing a transaction per settings value that is written.

Task-number: QTCREATORBUG-11524
Change-Id: I28e06c9d6cd4ebad024f9c277796abb37df5f992
Reviewed-by: hjk <hjk121@nokiamail.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>